# fullstack-platform

./: docker-compose.yml
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py
backend/tests/: test_main.py
frontend/: package.json
